--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "chatgpt-ext",
+    "name": "vue3-template",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -12,6 +12,7 @@
         "vue": "^3.3.11"
     },
     "devDependencies": {
+        "@types/node": "^20.10.7",
         "@typescript-eslint/eslint-plugin": "^6.18.0",
         "@typescript-eslint/parser": "^6.18.0",
         "@vitejs/plugin-vue": "^4.5.2",
