eslint-config-prettierをインストール
公式でインストール推奨

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "tabWidth": 4,
     "printWidth": 100,
     "vueIndentScriptAndStyle": false,
-    "htmlWhitespaceSensitivity": "ignore"
+    "htmlWhitespaceSensitivity": "ignore",
+    "endOfLine": "lf"
 }
